modification visuelle homepage et activities

--- a/templates/activities4/bali.html.twig
+++ b/templates/activities4/bali.html.twig
@@ -7,7 +7,15 @@
 <h1 class="animated-title">Welcome to Bali! </h1>
 <h2 class="dalal">Selamat Datang di Bali</h2>
 <h5 class="dalal">Prepare to fall in love with its nightlife, irresistible boutiques and exceptional gastronomy.</h5><br>
-<h3 class="animated-titles"><b>Bali:</b> popular activities</h3>
+<h3 class="animated-titles"><b>Bali:</b> popular activities...
+   <div class="star-rating">
+        <span class="star" data-value="1">&#9733;</span>
+        <span class="star" data-value="2">&#9733;</span>
+        <span class="star" data-value="3">&#9733;</span>
+        <span class="star" data-value="4">&#9733;</span>
+        <span class="star" data-value="5">&#9733;</span>
+    </div>
+</h3>
 
 <div class="tokyo">
 <div class="row row-cols-1 row-cols-md-3 g-4">
@@ -16,13 +24,7 @@
       <img src="assets/IMG/blF.webp" class="card-img-top" alt="...">
       <div class="card-body">
         <h5 class="card-title"><span title="Duration 1.5 hrs and Valid for 1 day">Uluwatu Kecak and Fire Dance</span></h5>
-           <div class="star-rating me-3">
-                  <span class="fa fa-star checked"></span>
-                  <span class="fa fa-star checked"></span>
-                  <span class="fa fa-star checked"></span>
-                  <span class="fa fa-star"></span>
-                  <span class="fa fa-star"></span>
-                </div>
+          <div></div>
         <p class="card-text">Watch Balinese natives perform mesmerizing Kecak dances, complete with swirling flames and traditional costumes.</p>
       </div>
       <p class="xaliss">Price: 60€</p>
@@ -36,13 +38,7 @@
       <img src="assets/IMG/blMB.jpg" class="card-img-top" alt="...">
       <div class="card-body">
         <h5 class="card-title"><span title="Duration 7 hrs and Valid for 1 day">Mont Batur</span></h5>
-           <div class="star-rating me-3">
-                  <span class="fa fa-star checked"></span>
-                  <span class="fa fa-star checked"></span>
-                  <span class="fa fa-star checked"></span>
-                  <span class="fa fa-star"></span>
-                  <span class="fa fa-star"></span>
-                </div>
+          <div></div>
         <p class="card-text">Admire the best views of Bali on this early morning hike to Batur Volcano. Contemplate an unforgettable sunrise once at the summit.</p>
       </div>
         <p class="xaliss">Price: 30€</p>
@@ -56,13 +52,7 @@
       <img src="assets/IMG/blDolphin.jpg" class="card-img-top" alt="...">
       <div class="card-body">
         <h5 class="card-title"><span title="Duration 2 hrs and Valid for 3 days">Lovina - Bali</span></h5>
-           <div class="star-rating me-3">
-                  <span class="fa fa-star checked"></span>
-                  <span class="fa fa-star checked"></span>
-                  <span class="fa fa-star checked"></span>
-                  <span class="fa fa-star"></span>
-                  <span class="fa fa-star"></span>
-                </div>
+          <div></div>
         <p class="card-text">Excursion to the north of Bali to see dolphins in their natural habitat, swim alongside them and go snorkeling in Lovina.</p>
       </div>
         <p class="xaliss">Price: 220€</p>
@@ -76,13 +66,7 @@
       <img src="assets/IMG/blQuad.jpg" class="card-img-top" alt="...">
       <div class="card-body">
         <h5 class="card-title"><span title="Duration 2 hrs and Valid for 1 day">Quad Bike Adventure in Ubud</span></h5>
-           <div class="star-rating me-3">
-                  <span class="fa fa-star checked"></span>
-                  <span class="fa fa-star checked"></span>
-                  <span class="fa fa-star checked"></span>
-                  <span class="fa fa-star"></span>
-                  <span class="fa fa-star"></span>
-                </div>
+          <div></div>
         <p class="card-text">Embark on an exhilarating quad bike adventure through picturesque landscapes, followed by relaxation at the Sunset Cretya Pool.</p>
       </div>
       <p class="xaliss">Price: 40€</p>
@@ -96,13 +80,7 @@
       <img src="assets/IMG/blSwim.jpg" class="card-img-top" alt="...">
       <div class="card-body">
         <h5 class="card-title"><span title="Duration 5 hrs and Valid for 1 week">Manta Point Snorkeling</span></h5>
-           <div class="star-rating me-3">
-                  <span class="fa fa-star checked"></span>
-                  <span class="fa fa-star checked"></span>
-                  <span class="fa fa-star checked"></span>
-                  <span class="fa fa-star"></span>
-                  <span class="fa fa-star"></span>
-                </div>
+          <div></div>
         <p class="card-text">Take a full-day tour from Nusa Penida, swim, snorkel and encounter the magnificent Manta Rays.</p>
       </div>
       <p class="xaliss">Price: 325€</p>
@@ -116,13 +94,7 @@
       <img src="assets/IMG/blTemple.jpg" class="card-img-top" alt="...">
       <div class="card-body">
         <h5 class="card-title"><span title="Duration 5 hrs and Valid for 1 week">Visit Besakih Temple</span></h5>
-           <div class="star-rating me-3">
-                  <span class="fa fa-star checked"></span>
-                  <span class="fa fa-star checked"></span>
-                  <span class="fa fa-star checked"></span>
-                  <span class="fa fa-star"></span>
-                  <span class="fa fa-star"></span>
-                </div>
+          <div></div>
         <p class="card-text">Take a private tour and take magical photos of the Gates of Heaven in Pura Lempuyang, with the majestic Mount Agung as a backdrop.</p>
       </div>
       <p class="xaliss">Price: 50€</p>
