--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -13,7 +13,7 @@
         <link rel="stylesheet" href="assets/CSS/order.css">
         <link rel="stylesheet" href="assets/CSS/adminDashboard.css">
         <link rel="stylesheet" href="assets/CSS/help.css">
-        <link rel="stylesheet" href="assets/CSS/activitie.css">
+        <link rel="stylesheet" href="assets/CSS/activities.css">
         <link rel="stylesheet" href="assets/CSS/rgpd.css">
         <link rel="stylesheet" href="assets/CSS/notice.css">
         {% endblock %}
@@ -21,6 +21,7 @@
         {% block javascripts %}
             <script src="assets/JS/bootstrap.min.js"></script>
             <script src="https://kit.fontawesome.com/fc2b28fd60.js" crossorigin="anonymous"></script>
+            <script src="assets/JS/stars.js"></script>
             {% block importmap %}{{ importmap('app') }}{% endblock %}
         {% endblock %}
     </head>
