--- a/templates/footer/footer.html.twig
+++ b/templates/footer/footer.html.twig
@@ -30,6 +30,7 @@
             <li><a href="">Japan</a></li>
             <li><a href="">Spain</a></li>
             <li><a href="">Finland</a></li>
+            <li><a href="">Bali</a></li>
         </ul>
     </div>
     <div class="col-2">
@@ -45,8 +46,9 @@
         <ul>
             <li class="titleFooter">Travel Blogs</li>
             <li><a href="">Tokyo Travel Guide</a></li>
-            <li><a href="">Barcelone Travel Guide</a></li>
+            <li><a href="">Barca Travel Guide</a></li>
             <li><a href="">Helsinky Travel Guide</a></li>
+            <li><a href="">Bali Travel Guide</a></li>
         </ul>
     </div>
     <div class="col-2">
