--- a/templates/home_page/homePage.html.twig
+++ b/templates/home_page/homePage.html.twig
@@ -13,11 +13,17 @@
     <h3 id="explore">EXPLORE THE WORLD</h3>
     <h1 class="main-title" data-text="Its Time To Travel Around The World">Its Time<br>To Travel Around<br>The World</h1>
     <br>
-    <p id="check">Check Off the Ultimate Global Travel Checklist With your Travel Partner!
+    <p class="check">Check Off the Ultimate Global Travel Checklist With your Travel Partner!
         <br>Make your vacation a fun, exciting, and unforgettable experience.</p>
     <br>
-    
-    <button type="button" class="btn btn-primary">Discover Now</button>
+   
+    <button class="cta">
+  <span>Discover Now</span>
+  <svg width="15px" height="10px" viewBox="0 0 13 10">
+    <path d="M1,5 L11,5"></path>
+    <polyline points="8 1 12 5 8 9"></polyline>
+  </svg>
+</button>
 </div>
 
         </div>
@@ -29,28 +35,28 @@
                     <img class="card-img-top" src="assets/IMG/barcelona.jpg" alt="Card1">
                     <div class="card-body">
                         <h5 class="card-title">Barcelona, Spain</h5>
-                        <p class="card-text">"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation."</p>
+                        <p class="card-text">"Dreamlike architecture, colorful markets and tasty tapas await you in the Catalan capital."</p>
                     </div>
                 </a>
                 <a href="#tokyo" class="card">
                     <img class="card-img-top" src="assets/IMG/tokyo.jpg" alt="Card2">
                     <div class="card-body">
                         <h5 class="card-title">Tokyo, Japan</h5>
-                        <p class="card-text">"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation."</p>
+                        <p class="card-text">"Prepare to fall in love with its nightlife, irresistible boutiques and exceptional gastronomy."</p>
                     </div>
                 </a>
                 <a href="#helsinki" class="card">
                     <img class="card-img-top" src="assets/IMG/helsinki.jpg" alt="Card3">
                     <div class="card-body">
                         <h5 class="card-title">Helsinki, Finland</h5>
-                        <p class="card-text">"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation."</p>
+                        <p class="card-text">"The Finnish capital fascinates with its clean air, artistic monuments and modern architecture."</p>
                     </div>
                 </a>
                 <a href="#bali" class="card">
                     <img class="card-img-top" src="assets/IMG/bali.jpg" alt="Card4">
                     <div class="card-body">
                         <h5 class="card-title">Bali, Indonesia</h5>
-                        <p class="card-text">"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation."</p>
+                        <p class="card-text">"This paradise on earth combines breathtaking landscapes, unique biodiversity and characteristic architecture."</p>
                     </div>
                 </a>
             </div>
