--- a/public/assets/CSS/activities.css
+++ b/public/assets/CSS/activities.css
@@ -122,7 +122,7 @@
     color: #333;
     position: relative;
     /* white-space: nowrap; Empêche le texte de passer à la ligne */
-    animation: slideIn 5s infinite;
+    animation: slideIn 15s infinite;
     overflow: hidden; 
     display: flex;
     justify-content: center;
@@ -142,4 +142,29 @@
     100% {
         transform: translateX(100%);
     }
+}
+
+
+.star-rating {
+    display: flex;
+    direction: row;
+    text-align: center;
+    justify-content: center;
+
+}
+
+.star {
+    font-size: 2rem;
+    color: gray;
+    cursor: pointer;
+    transition: color 0.2s;
+}
+
+.star:hover,
+.star:hover ~ .star {
+    color: gold;
+}
+
+.star.selected {
+    color: gold;
 }
