--- a/public/assets/CSS/homepage.css
+++ b/public/assets/CSS/homepage.css
@@ -25,8 +25,13 @@
     font-weight: bold;
 }
 
-#check {
+.check {
     color: #A1A1A1;
+}
+
+.check:hover {
+    color: #070000;
+    font-weight: bold;
 }
 
 /* Styles pour les images */
@@ -41,12 +46,6 @@
     object-fit: cover;
 }
 
-/* Styles pour les boutons */
-#homepage .btn {
-    border-radius: 25%;
-    background-color: #00A0B1;
-    align-self: flex-end;
-}
 
 /* Styles pour les sections */
 #homepage .content {
@@ -139,3 +138,63 @@
 #homepage .card:hover .card-text {
     display: block; /* Afficher au survol */
 }
+
+/* Styles pour les boutons */
+#homepage .cta {
+    position: relative;
+    margin: auto;
+    padding: 12px 18px;
+    transition: all 0.2s ease;
+    border: none;
+    background: none;
+    cursor: pointer;
+  }
+  
+  #homepage .cta:before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    display: block;
+    border-radius: 50px;
+    background: #b1dae7;
+    width: 45px;
+    height: 45px;
+    transition: all 0.3s ease;
+  }
+  
+  #homepage .cta span {
+    position: relative;
+    font-family: "Ubuntu", sans-serif;
+    font-size: 18px;
+    font-weight: 700;
+    letter-spacing: 0.05em;
+    color: #234567;
+  }
+  
+  #homepage .cta svg {
+    position: relative;
+    top: 0;
+    margin-left: 10px;
+    fill: none;
+    stroke-linecap: round;
+    stroke-linejoin: round;
+    stroke: #234567;
+    stroke-width: 2;
+    transform: translateX(-5px);
+    transition: all 0.3s ease;
+  }
+  
+  #homepage .cta:hover:before {
+    width: 100%;
+    background: #b1dae7;
+  }
+  
+  #homepage .cta:hover svg {
+    transform: translateX(0);
+  }
+  
+  #homepage .cta:active {
+    transform: scale(0.95);
+  }
+  
