--- a/templates/activities2/barcelona.html.twig
+++ b/templates/activities2/barcelona.html.twig
@@ -6,8 +6,17 @@
 <br>
 <h1 class="animated-title">Welcome to Barcelona! </h1>
 <h2 class="dalal">Bienvenudo a Barcelona</h2>
-<h5 class="dalal">Dreamlike architecture, colorful markets and tasty tapas await you in the Catalan capital.</h5><br>
-<h3 class="animated-titles"><b>Barcelona:</b> popular activities</h3>
+<h5 class="dalal">Dreamlike architecture, colorful markets and tasty tapas await you in the Catalan capital.</h5>
+    <br>
+<h3 class="animated-titles"><b>Barcelona:</b> popular activities...
+   <div class="star-rating">
+        <span class="star" data-value="1">&#9733;</span>
+        <span class="star" data-value="2">&#9733;</span>
+        <span class="star" data-value="3">&#9733;</span>
+        <span class="star" data-value="4">&#9733;</span>
+        <span class="star" data-value="5">&#9733;</span>
+    </div>
+</h3>
 
 <div class="tokyo">
 <div class="row row-cols-1 row-cols-md-3 g-4">
@@ -16,13 +25,7 @@
       <img src="assets/IMG/esGuell.jpg" class="card-img-top" alt="...">
       <div class="card-body">
         <h5 class="card-title"><span title="Duration 6 hrs and Valid for 1 day">Güell Parc</span></h5>
-           <div class="star-rating me-3">
-                  <span class="fa fa-star checked"></span>
-                  <span class="fa fa-star checked"></span>
-                  <span class="fa fa-star checked"></span>
-                  <span class="fa fa-star"></span>
-                  <span class="fa fa-star"></span>
-                </div>
+     <div></div>
         <p class="card-text">Explore one of Gaudí's legendary creations and admire a magnificent panorama of Barcelona.</p>
       </div>
       <p class="xaliss">Price: 60€</p>
@@ -36,13 +39,7 @@
       <img src="assets/IMG/esPicasso.jpg" class="card-img-top" alt="...">
       <div class="card-body">
         <h5 class="card-title"><span title="Duration 3 hrs and Valid for 1 day">Picasso Museum of Barcelona</span></h5>
-           <div class="star-rating me-3">
-                  <span class="fa fa-star checked"></span>
-                  <span class="fa fa-star checked"></span>
-                  <span class="fa fa-star checked"></span>
-                  <span class="fa fa-star"></span>
-                  <span class="fa fa-star"></span>
-                </div>
+          <div></div>
         <p class="card-text">A museum dedicated to the life and work of Pablo Picasso, featuring an extensive collection.</p>
       </div>
         <p class="xaliss">Price: 30€</p>
@@ -56,13 +53,7 @@
       <img src="assets/IMG/esCN.jpg" class="card-img-top" alt="...">
       <div class="card-body">
         <h5 class="card-title"><span title="Duration 1 hr and Valid for 1 day">Camp Nou Visit</span></h5>
-           <div class="star-rating me-3">
-                  <span class="fa fa-star checked"></span>
-                  <span class="fa fa-star checked"></span>
-                  <span class="fa fa-star checked"></span>
-                  <span class="fa fa-star"></span>
-                  <span class="fa fa-star"></span>
-                </div>
+          <div></div>
         <p class="card-text">Discover the history of Catalan's players and managers like Messi and Ronaldinho.</p>
       </div>
         <p class="xaliss">Price: 120€</p>
@@ -76,13 +67,7 @@
       <img src="assets/IMG/esKayak.jpg" class="card-img-top" alt="...">
       <div class="card-body">
         <h5 class="card-title"><span title="Duration 2 hrs and Valid for 1 day">Kayak</span></h5>
-           <div class="star-rating me-3">
-                  <span class="fa fa-star checked"></span>
-                  <span class="fa fa-star checked"></span>
-                  <span class="fa fa-star checked"></span>
-                  <span class="fa fa-star"></span>
-                  <span class="fa fa-star"></span>
-                </div>
+          <div></div>
         <p class="card-text">Costa Brava Kayak, Snorkeling and Cliff Jumping with Lunch.</p>
       </div>
       <p class="xaliss">Price: 40€</p>
@@ -96,13 +81,7 @@
       <img src="assets/IMG/EsAqua.jpg" class="card-img-top" alt="...">
       <div class="card-body">
         <h5 class="card-title"><span title="Duration 2 hrs and Valid for 1 day">Aquarium of Barcelona</span></h5>
-           <div class="star-rating me-3">
-                  <span class="fa fa-star checked"></span>
-                  <span class="fa fa-star checked"></span>
-                  <span class="fa fa-star checked"></span>
-                  <span class="fa fa-star"></span>
-                  <span class="fa fa-star"></span>
-                </div>
+          <div></div>
         <p class="card-text">The aquarium is known for its extensive collection of marine life from around the world.</p>
       </div>
       <p class="xaliss">Price: 25€</p>
@@ -116,13 +95,7 @@
       <img src="assets/IMG/esPaddle.jpg" class="card-img-top" alt="...">
       <div class="card-body">
         <h5 class="card-title"><span title="Duration 1 hr and Valid for 1 day">Paddleboard</span></h5>
-           <div class="star-rating me-3">
-                  <span class="fa fa-star checked"></span>
-                  <span class="fa fa-star checked"></span>
-                  <span class="fa fa-star checked"></span>
-                  <span class="fa fa-star"></span>
-                  <span class="fa fa-star"></span>
-                </div>
+          <div></div>
         <p class="card-text">Paddleboard at sunrise with instructor and photos at Barceloneta Beach. </p>
       </div>
       <p class="xaliss">Price: 70€</p>
