--- a/templates/activities/helsinki.html.twig
+++ b/templates/activities/helsinki.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Bali!{% endblock %}
+{% block title %}Helsinki!{% endblock %}
 
 {% block body %}
 <br>
@@ -8,7 +8,15 @@
 <h2 class="dalal">Tervetuloa Helsinkiin</h2>
 <br>
 <h5 class="dalal">The Finnish capital fascinates with its clean air, artistic monuments and modern architecture.</h5><br>
-<h3 class="animated-titles"><b>Helsinki:</b> popular activities</h3>
+<h3 class="animated-titles"><b>Helsinki:</b> popular activities
+            <div class="star-rating">
+        <span class="star" data-value="1">&#9733;</span>
+        <span class="star" data-value="2">&#9733;</span>
+        <span class="star" data-value="3">&#9733;</span>
+        <span class="star" data-value="4">&#9733;</span>
+        <span class="star" data-value="5">&#9733;</span>
+    </div>
+    </h3>
 <div class="tokyo">
 <div class="row row-cols-1 row-cols-md-3 g-4">
   <div class="col">
@@ -16,13 +24,6 @@
       <img src="assets/IMG/hlIsland.jpg" class="card-img-top" alt="...">
       <div class="card-body">
         <h5 class="card-title"><span title="Duration 3 hrs and Valid for 2 days">Sightseeing tour in Suomenlinna</span></h5>
-           <div class="star-rating me-3">
-                  <span class="fa fa-star checked"></span>
-                  <span class="fa fa-star checked"></span>
-                  <span class="fa fa-star checked"></span>
-                  <span class="fa fa-star"></span>
-                  <span class="fa fa-star"></span>
-                </div>
         <p class="card-text">Discover the sights of Helsinki on a 5-hour guided tour and marvel at attractions like the Sibelius Monument and Esplanade Park. </p>
       </div>
       <p class="xaliss">Price: 40€</p>
@@ -36,13 +37,6 @@
       <img src="assets/IMG/hlSea.jpg" class="card-img-top" alt="...">
       <div class="card-body">
         <h5 class="card-title"><span title="Duration 4 hrs and Valid for 1 day">Sea Life</span></h5>
-           <div class="star-rating me-3">
-                  <span class="fa fa-star checked"></span>
-                  <span class="fa fa-star checked"></span>
-                  <span class="fa fa-star checked"></span>
-                  <span class="fa fa-star"></span>
-                  <span class="fa fa-star"></span>
-                </div>
         <p class="card-text">Discover the world under the ocean and amazing sea creatures such as sharks, chaat fish at Sea Life Helsinki.</p>
       </div>
         <p class="xaliss">Price: 70€</p>
@@ -56,13 +50,6 @@
       <img src="assets/IMG/hlParc.jpg" class="card-img-top" alt="...">
       <div class="card-body">
         <h5 class="card-title"><span title="Duration 2 hrs and Valid for 2 weeks">Nuuksio National Park</span></h5>
-           <div class="star-rating me-3">
-                  <span class="fa fa-star checked"></span>
-                  <span class="fa fa-star checked"></span>
-                  <span class="fa fa-star checked"></span>
-                  <span class="fa fa-star"></span>
-                  <span class="fa fa-star"></span>
-                </div>
         <p class="card-text">Admire and go for a hike in the company of a biologist. tall coniferous forests, lakes and ancient cliffs covered in moss and lichens.</p>
       </div>
         <p class="xaliss">Price: 90€</p>
@@ -76,13 +63,6 @@
       <img src="assets/IMG/hlChurch.jpg" class="card-img-top" alt="...">
       <div class="card-body">
         <h5 class="card-title"><span title="Duration 1 hr and Valid for 1 day">Temppeliaukio Church</span></h5>
-           <div class="star-rating me-3">
-                  <span class="fa fa-star checked"></span>
-                  <span class="fa fa-star checked"></span>
-                  <span class="fa fa-star checked"></span>
-                  <span class="fa fa-star"></span>
-                  <span class="fa fa-star"></span>
-                </div>
         <p class="card-text">Discover this architectural gem in Helsinki. A jewel of Finnish architecture, a world-famous site, a working church and a renowned concert venue.</p>
       </div>
       <p class="xaliss">Price: 15€</p>
@@ -96,16 +76,9 @@
       <img src="assets/IMG/hlSnow.jpg" class="card-img-top" alt="...">
       <div class="card-body">
         <h5 class="card-title"><span title="Duration 30mn and Valid for 1 day">Survival Experience</span></h5>
-           <div class="star-rating me-3">
-                  <span class="fa fa-star checked"></span>
-                  <span class="fa fa-star checked"></span>
-                  <span class="fa fa-star checked"></span>
-                  <span class="fa fa-star"></span>
-                  <span class="fa fa-star"></span>
-                </div>
         <p class="card-text">Discover what it's like to float in water while staying warm and dry with a survival suit experience in the heart of Helsinki.</p>
       </div>
-      <p class="xaliss">Price: 35€</p>
+      <p class="xaliss">Price: 135€</p>
       <div class="card-footer">
         <small class="text-body-secondary"><button class="button" style="vertical-align:middle"><span>Add</span></button></small>
       </div>
@@ -116,13 +89,6 @@
       <img src="assets/IMG/hlOB.jpg" class="card-img-top" alt="...">
       <div class="card-body">
         <h5 class="card-title"><span title="Duration 3 hrs and Valid for 2 days">Northern Lights Adventure</span></h5>
-           <div class="star-rating me-3">
-                  <span class="fa fa-star checked"></span>
-                  <span class="fa fa-star checked"></span>
-                  <span class="fa fa-star checked"></span>
-                  <span class="fa fa-star"></span>
-                  <span class="fa fa-star"></span>
-                </div>
         <p class="card-text">A group of islands in the Finnish capital, known for its picturesque landscapes, peaceful nature and recreational activities. </p>
       </div>
       <p class="xaliss">Price: 310€</p>
