--- a/templates/footer/footer.html.twig
+++ b/templates/footer/footer.html.twig
@@ -27,26 +27,28 @@
         
         <ul>
             <li class="titleFooter">Our Destinations</li>
-            <li><a href="">Japan</a></li>
-            <li><a href="">Spain</a></li>
-            <li><a href="">Finland</a></li>
+            <li><a href="tokyovisit">Japan</a></li>
+            <li><a href="barcelonavisit">Spain</a></li>
+            <li><a href="helsinkivisit">Finland</a></li>
+            <li><a href="balivisit">Indonesia</a></li>
         </ul>
     </div>
     <div class="col-2">
         <ul>
             <li class="titleFooter">Our Activities</li>
-            <li><a href="">Northern Lights</a></li>
-            <li><a href="">Cruising & sailing</a></li>
-            <li><a href="">Multi-activities</a></li>
-            <li><a href="">Kayak</a></li>
+            <li><a href="activities">Northern Lights</a></li>
+            <li><a href="activities2">Cruising & sailing</a></li>
+            <li><a href="activities3">Multi-activities</a></li>
+            <li><a href="activities4">Kayak</a></li>
         </ul>
     </div>
     <div class="col-2">
         <ul>
             <li class="titleFooter">Travel Blogs</li>
-            <li><a href="">Tokyo Travel Guide</a></li>
-            <li><a href="">Barcelone Travel Guide</a></li>
-            <li><a href="">Helsinky Travel Guide</a></li>
+            <li><a href="activities3">Tokyo Travel Guide</a></li>
+            <li><a href="activities2">Barcelone Travel Guide</a></li>
+            <li><a href="activities">Helsinki Travel Guide</a></li>
+            <li><a href="activities4">Bali Travel Guide</a></li>
         </ul>
     </div>
     <div class="col-2">
