--- a/templates/home_page/homePage.html.twig
+++ b/templates/home_page/homePage.html.twig
@@ -17,7 +17,7 @@
         <br>Make your vacation a fun, exciting, and unforgettable experience.</p>
     <br>
     
-    <button type="button" class="btn btn-primary">Discover Now</button>
+    <button class="btnes">Discover now</button>
 </div>
 
         </div>
@@ -25,28 +25,28 @@
         <section class="content">
             <h2 id="popular">Our Destinations</h2>
             <div class="destinations">
-                <a href="#barcelona" class="card">
+                <a href="barcelonavisit" class="card">
                     <img class="card-img-top" src="assets/IMG/barcelona.jpg" alt="Card1">
                     <div class="card-body">
                         <h5 class="card-title">Barcelona, Spain</h5>
                         <p class="card-text">"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation."</p>
                     </div>
                 </a>
-                <a href="#tokyo" class="card">
+                <a href="tokyovisit" class="card">
                     <img class="card-img-top" src="assets/IMG/tokyo.jpg" alt="Card2">
                     <div class="card-body">
                         <h5 class="card-title">Tokyo, Japan</h5>
                         <p class="card-text">"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation."</p>
                     </div>
                 </a>
-                <a href="#helsinki" class="card">
+                <a href="helsinkivisit" class="card">
                     <img class="card-img-top" src="assets/IMG/helsinki.jpg" alt="Card3">
                     <div class="card-body">
                         <h5 class="card-title">Helsinki, Finland</h5>
                         <p class="card-text">"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation."</p>
                     </div>
                 </a>
-                <a href="#bali" class="card">
+                <a href="balivisit" class="card">
                     <img class="card-img-top" src="assets/IMG/bali.jpg" alt="Card4">
                     <div class="card-body">
                         <h5 class="card-title">Bali, Indonesia</h5>
