--- a/public/assets/CSS/homepage.css
+++ b/public/assets/CSS/homepage.css
@@ -29,6 +29,10 @@
     color: #A1A1A1;
 }
 
+#check:hover {
+    color: #110101;
+}
+
 /* Styles pour les images */
 #imgHomepage {
     /* margin-left: 300px; */
@@ -139,3 +143,62 @@
 #homepage .card:hover .card-text {
     display: block; /* Afficher au survol */
 }
+
+
+.btnes {
+    text-decoration: none;
+  position: relative;
+  border: none;
+  font-size: 14px;
+  font-family: inherit;
+  cursor: pointer;
+  color: #fff;
+  width: 9em;
+  height: 3em;
+  line-height: 2em;
+  text-align: center;
+  background: linear-gradient(90deg, #03a9f4, #f441a5, #ffeb3b, #03a9f4);
+  background-size: 300%;
+  border-radius: 30px;
+  z-index: 1;
+  font-weight: bold;
+}
+
+.btnes:hover {
+  animation: ani 8s linear infinite;
+  border: none;
+}
+
+@keyframes ani {
+  0% {
+    background-position: 0%;
+  }
+
+  100% {
+    background-position: 400%;
+  }
+}
+
+.btnes:before {
+  content: "";
+  position: absolute;
+  top: -5px;
+  left: -5px;
+  right: -5px;
+  bottom: -5px;
+  z-index: -1;
+  background: linear-gradient(90deg, #03a9f4, #f441a5, #ffeb3b, #03a9f4);
+  background-size: 400%;
+  border-radius: 35px;
+  transition: 1s;
+}
+
+.btnes:hover::before {
+  filter: blur(20px);
+}
+
+.btnes:active {
+  background: linear-gradient(32deg, #03a9f4, #f441a5, #ffeb3b, #03a9f4);
+  }
+
+  
