--- a/templates/activities3/tokyo.html.twig
+++ b/templates/activities3/tokyo.html.twig
@@ -7,7 +7,15 @@
 <h1 class="animated-title">Welcome to Tokyo! </h1>
 <h3 class="dalal">東京へようこそ</h3>
 <h5 class="dalal">This paradise on earth combines breathtaking landscapes, unique biodiversity and characteristic architecture.</h5><br>
-<h3 class="animated-titles"><b>Tokyo:</b> popular activities</h3>
+<h3 class="animated-titles"><b>Tokyo:</b> popular activities
+<div class="star-rating">
+        <span class="star" data-value="1">&#9733;</span>
+        <span class="star" data-value="2">&#9733;</span>
+        <span class="star" data-value="3">&#9733;</span>
+        <span class="star" data-value="4">&#9733;</span>
+        <span class="star" data-value="5">&#9733;</span>
+    </div>
+</h3>
 
 <div class="tokyo">
 <div class="row row-cols-1 row-cols-md-3 g-4">
@@ -16,13 +24,6 @@
       <img src="assets/IMG/tkManga.jpg" class="card-img-top" alt="...">
       <div class="card-body">
         <h5 class="card-title"><span title="Duration 1.5 hrs and Valid for 1 day">Manga's museum</span></h5>
-        <div class="star-rating me-3">
-                  <span class="fa fa-star checked"></span>
-                  <span class="fa fa-star checked"></span>
-                  <span class="fa fa-star checked"></span>
-                  <span class="fa fa-star"></span>
-                  <span class="fa fa-star"></span>
-                </div>
         <p class="card-text">The Studio Ghibli Museum, located in Mitaka, the museum focuses on the popular animation studio of Manga. </p>
       </div>
       <p class="xaliss">Price: 35€</p>
@@ -36,13 +37,6 @@
       <img src="assets/IMG/tkSumo.jpg" class="card-img-top" alt="...">
       <div class="card-body">
         <h5 class="card-title"><span title="Duration 1 hr and Valid for 3 days">Ryogoku - Sumo's center</span></h5>
-        <div class="star-rating me-3">
-                  <span class="fa fa-star checked"></span>
-                  <span class="fa fa-star checked"></span>
-                  <span class="fa fa-star checked"></span>
-                  <span class="fa fa-star"></span>
-                  <span class="fa fa-star"></span>
-                </div>
         <p class="card-text">Learn the rules of sumo and how to practice it, watch demonstrations, then try wrestling yourself in Ryogoku.</p>
       </div>
       <p class="xaliss">Price: 80€</p>
@@ -56,13 +50,6 @@
       <img src="assets/IMG/tkNinja.jpg" class="card-img-top" alt="...">
       <div class="card-body">
         <h5 class="card-title"><span title="Duration 2 hrs and Valid for 1 week">Ninja's house of Tokyo</span></h5>
-        <div class="star-rating me-3">
-                  <span class="fa fa-star checked"></span>
-                  <span class="fa fa-star checked"></span>
-                  <span class="fa fa-star checked"></span>
-                  <span class="fa fa-star"></span>
-                  <span class="fa fa-star"></span>
-                </div>
         <p class="card-text">Nestled in the heart of Tokyo, Nezu Shrine is an ancient cultural site renowned for its stunning architecture and peaceful atmosphere.</p>
       </div>
       <p class="xaliss">Price: 125€</p>
@@ -76,13 +63,6 @@
       <img src="assets/IMG/tkParcA.jpg" class="card-img-top" alt="...">
       <div class="card-body">
         <h5 class="card-title"><Span title="Duration 3 hrs and Valid for 1 day">Dome amusement park</Span></h5>
-        <div class="star-rating me-3">
-                  <span class="fa fa-star checked"></span>
-                  <span class="fa fa-star checked"></span>
-                  <span class="fa fa-star checked"></span>
-                  <span class="fa fa-star"></span>
-                  <span class="fa fa-star"></span>
-                </div>
         <p class="card-text">Day trip to Mount Fuji area, Oshino Hakkai and Lake Kawaguchi in the colorful Dome amusement park.</p>
       </div>
       <p class="xaliss">Price: 30€</p>
@@ -96,13 +76,6 @@
       <img src="assets/IMG/tkHK.jpg" class="card-img-top" alt="...">
       <div class="card-body">
         <h5 class="card-title"><span title="Duration 2 hrs and Valid for 1 day">Sanrio Puroland</span></h5>
-        <div class="star-rating me-3">
-                  <span class="fa fa-star checked"></span>
-                  <span class="fa fa-star checked"></span>
-                  <span class="fa fa-star checked"></span>
-                  <span class="fa fa-star"></span>
-                  <span class="fa fa-star"></span>
-                </div>
         <p class="card-text">Discover the charming Sanrio Puroland in Tokyo with this admission ticket. Explore the world of Hello Kitty, witness the Miracle Gift.</p>
       </div>
       <p class="xaliss">Price: 210€</p>
@@ -116,13 +89,6 @@
       <img src="assets/IMG/tkOcean.jpg" class="card-img-top" alt="...">
       <div class="card-body">
         <h5 class="card-title"><span title="Duration 8 hrs and Valid for 1 week">Mikurajima</span></h5>
-        <div class="star-rating me-3">
-                  <span class="fa fa-star checked"></span>
-                  <span class="fa fa-star checked"></span>
-                  <span class="fa fa-star checked"></span>
-                  <span class="fa fa-star"></span>
-                  <span class="fa fa-star"></span>
-                </div>
         <p class="card-text">Discover Mount Mikurajima on a full-day tour from Tokyo. Admire the grandeur of Japan's highest peak.</p>
       </div>
       <p class="xaliss">Price: 70€</p>
