--- a/templates/tokyo/tokyovisit.html.twig
+++ b/templates/tokyo/tokyovisit.html.twig
@@ -98,9 +98,7 @@
 </div>
             <div class="card-body">
                 <h5 class="card-title">The Oruka Tokyo</h5>
-                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional
-                    content.
-                    This content is a little bit longer.</p>
+                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
             </div>
             <div class="card-footer">
                 <small class="text-body-secondary"><button class="buttoneS">Book now
@@ -138,7 +136,7 @@
 </div>
             <div class="card-body">
                 <h5 class="card-title">Imperial Hotel Tokyo</h5>
-                <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
             </div>
             <div class="card-footer">
                 <small class="text-body-secondary"><button class="buttoneS">Book now
