--- a/templates/balivisit/balivisit.html.twig
+++ b/templates/balivisit/balivisit.html.twig
@@ -110,9 +110,7 @@
 </div>
             <div class="card-body">
                 <h5 class="card-title">Ulu Cliffhouse</h5>
-                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional
-                    content.
-                    This content is a little bit longer.</p>
+                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
             </div>
             <div class="card-footer">
                 <small class="text-body-secondary"><button class="buttoneS">Book now
@@ -150,7 +148,7 @@
 </div>
             <div class="card-body">
                 <h5 class="card-title">Tanadewa Resort Ubud Bali</h5>
-                <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
             </div>
             <div class="card-footer">
                 <small class="text-body-secondary"><button class="buttoneS">Book now
