--- a/templates/destination_babacar/helsinkivisit.html.twig
+++ b/templates/destination_babacar/helsinkivisit.html.twig
@@ -74,7 +74,7 @@
       <img src="assets/IMG/Valo_Hotel6.jpg" class="d-block w-100" alt="...">
     </div>
     <div class="carousel-item">
-      <img src="assets/IMG/Valo_Hotel1.jpg" class="d-block w-100" alt="...">
+      <img src="assets/IMG/Valo_Hotel5.jpg" class="d-block w-100" alt="...">
     </div>
     <div class="carousel-item">
       <img src="assets/IMG/Valo_Hotel3.jpg" class="d-block w-100" alt="...">
@@ -91,9 +91,7 @@
 </div>
             <div class="card-body">
                 <h5 class="card-title">Valo Hotel</h5>
-                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional
-                    content.
-                    This content is a little bit longer.</p>
+                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action</p>
             </div>
             <div class="card-footer">
                 <small class="text-body-secondary"><button class="buttoneS">Book now
@@ -111,13 +109,13 @@
             <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img src="assets/IMG/Valo_Hotel5.jpg" class="d-block w-100" alt="...">
+      <img src="assets/IMG/SS1.jpg" class="d-block w-100" alt="...">
     </div>
     <div class="carousel-item">
-      <img src="assets/IMG/Valo_Hotel10.jpg" class="d-block w-100" alt="...">
+      <img src="assets/IMG/SS2.jpg" class="d-block w-100" alt="...">
     </div>
     <div class="carousel-item">
-      <img src="assets/IMG/Valo_Hotel4.jpg" class="d-block w-100" alt="...">
+      <img src="assets/IMG/SS3.jpg" class="d-block w-100" alt="...">
     </div>
   </div>
   <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="prev">
@@ -130,8 +128,8 @@
   </button>
 </div>
             <div class="card-body">
-                <h5 class="card-title">Hotel Kamp</h5>
-                <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+                <h5 class="card-title">Scandic Simonkenttä</h5>
+                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action</p>
             </div>
             <div class="card-footer">
                 <small class="text-body-secondary"><button class="buttoneS">Book now
@@ -149,13 +147,13 @@
             <div id="carouselExampleFade" class="carousel slide carousel-fade">
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img src="assets/IMG/Valo_Hotel7.jpg" class="d-block w-100" alt="...">
+      <img src="assets/IMG/HM1.jpg" class="d-block w-100" alt="...">
     </div>
     <div class="carousel-item">
-      <img src="assets/IMG/Valo_Hotel8.jpg" class="d-block w-100" alt="...">
+      <img src="assets/IMG/HM2jpg.jpg" class="d-block w-100" alt="...">
     </div>
     <div class="carousel-item">
-      <img src="assets/IMG/Valo_Hotel9.jpg" class="d-block w-100" alt="...">
+      <img src="assets/IMG/HM3.jpg" class="d-block w-100" alt="...">
     </div>
   </div>
   <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="prev">
