--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -17,12 +17,14 @@
         <link rel="stylesheet" href="assets/CSS/rgpd.css">
         <link rel="stylesheet" href="assets/CSS/notice.css">
         <link rel="stylesheet" href="assets/CSS/destiny.css">
+        <link rel="stylesheet" href="assets/CSS/hotel.css">
         {% endblock %}
 
         {% block javascripts %}
             <script src="assets/JS/bootstrap.min.js"></script>
             <script src="https://kit.fontawesome.com/fc2b28fd60.js" crossorigin="anonymous"></script>
             <script src="assets/JS/stars.js"></script>
+            <script src="assets/JS/hotel.js"></script>
             {% block importmap %}{{ importmap('app') }}{% endblock %}
         {% endblock %}
     </head>
