--- a/templates/footer/footer.html.twig
+++ b/templates/footer/footer.html.twig
@@ -46,7 +46,7 @@
         <ul>
             <li class="titleFooter">Travel Blogs</li>
             <li><a href="activities3">Tokyo Travel Guide</a></li>
-            <li><a href="activities2">Barcelone Travel Guide</a></li>
+            <li><a href="activities2">Barca Travel Guide</a></li>
             <li><a href="activities">Helsinki Travel Guide</a></li>
             <li><a href="activities4">Bali Travel Guide</a></li>
         </ul>
@@ -54,6 +54,7 @@
     <div class="col-2">
         <ul>
             <li class="titleFooter">About us</li>
+            <li><a href="">Contact us</a></li>
             <li><a href="">Our Story</a></li>
             <li><a href="">Work with us</a></li>
             
