--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -17,7 +17,7 @@
         <link rel="stylesheet" href="assets/CSS/rgpd.css">
         <link rel="stylesheet" href="assets/CSS/notice.css">
         <link rel="stylesheet" href="assets/CSS/destiny.css">
-        <link rel="stylesheet" href="assets/CSS/hotel.css">
+        <link rel="stylesheet" href="assets/CSS/hotelS.css">
         {% endblock %}
 
         {% block javascripts %}
