--- a/templates/scandic/scandichotel.html.twig
+++ b/templates/scandic/scandichotel.html.twig
@@ -20,16 +20,16 @@
 </lord-icon><span>Simonkatu 9, Kamppi, 00100 Helsinki, Finland – Excellent location - Access to the station and
   metro</span>
 <div class="contianer">
-  <div class="item"><img src="assets/IMG/Valo_Hotel6.jpg" alt="face hotel"></div>
-  <div class="item"><img src="assets/IMG/Valo_Hotel1.jpg" alt="face hotel"></div>
-  <div class="item"><img src="assets/IMG/Valo_Hotel4.jpg" alt="inside hotel"></div>
-  <div class="item"><img src="assets/IMG/Valo_Hotel3.jpg" alt="inside hotel"></div>
-  <div class="item"><img src="assets/IMG/Valo_Hotel5.jpg" alt="room"></div>
-  <div class="item"><img src="assets/IMG/Valo_Hotel9.jpg" alt="restaurant"></div>
-  <div class="item"><img src="assets/IMG/Valo_Hotel2.jpg" alt="pool"></div>
-  <div class="item"><img src="assets/IMG/Valo_Hotel8.jpg" alt="pool"></div>
-  <div class="item"><img src="assets/IMG/Valo_Hotel7.jpg" alt="sauna"></div>
-  <div class="item"><img src="assets/IMG/Valo_Hotel10.jpg" alt="sport"></div>
+  <div class="item"><img src="assets/IMG/scandichotel/SS1.jpg" alt="face hotel"></div>
+  <div class="item"><img src="assets/IMG/scandichotel/SS4.jpg" alt="inside hotel"></div>
+  <div class="item"><img src="assets/IMG/scandichotel/SS2.jpg" alt="face hotel"></div>
+  <div class="item"><img src="assets/IMG/scandichotel/SS3.jpg" alt="inside hotel"></div>
+  <div class="item"><img src="assets/IMG/scandichotel/SS5.jpg" alt="room"></div>
+  <div class="item"><img src="assets/IMG/scandichotel/SS6.jpg" alt="restaurant"></div>
+  <div class="item"><img src="assets/IMG/scandichotel/SS7.jpg" alt="pool"></div>
+  <div class="item"><img src="assets/IMG/scandichotel/SS8.jpg" alt="pool"></div>
+  <div class="item"><img src="assets/IMG/scandichotel/SS9.jpg" alt="sauna"></div>
+  <div class="item"><img src="assets/IMG/scandichotel/SS10.jpg" alt="sport"></div>
 </div>
 <hr>
 
@@ -229,6 +229,7 @@
           <select>
             <option value="0">0</option>
             <option value="1">1</option>
+            <option value="2">2</option>
           </select>
         </div>
         <div class="room-option">
@@ -236,6 +237,7 @@
           <select>
             <option value="0">0</option>
             <option value="1">1</option>
+            <option value="2">2</option>
           </select>
         </div>
         <div class="room-option">
@@ -252,9 +254,10 @@
             <option value="0">0</option>
             <option value="1">1</option>
             <option value="2">2</option>
+            
           </select>
         </div>
-        <button type="submit" class="button3">Book now</button>
+        <button class="buttonQQQ" style="vertical-align:middle"><span>Book</span></button>
       </form>
     </div>
   </div>
