--- a/templates/valo/valo.html.twig
+++ b/templates/valo/valo.html.twig
@@ -1,23 +1,264 @@
 {% extends 'base.html.twig' %}
 
-{% block title %} ValoHotel!{% endblock %}
+{% block title %}Valo Hotel!{% endblock %}
 
 {% block body %}
 
-<div><h1 class="animated-title">Valo Hotel</h1></div>
+<div>
+  <h1 class="animated-title">VALO Hotel & Work Helsinki
+    <div class="stares">
+      <span class="stare"> &#9733;</span>
+      <span class="stare">&#9733;</span>
+      <span class="stare">&#9733;</span>
+      <span class="stare">&#9733;</span>
+    </div>
+  </h1>
+</div>
+
+<script src="https://cdn.lordicon.com/lordicon.js"></script>
+<lord-icon src="https://cdn.lordicon.com/tdtlrbly.json" trigger="hover" style="width:30px;height:30px">
+</lord-icon><span>109 Mannerheimintie, 00280 Helsinki, Finlande – Bon emplacement</span>
 <div class="contianer">
-        <div class="item"><img src="assets/IMG/Valo_Hotel6.jpg" alt="face hotel"></div>
-        <div class="item"><img src="assets/IMG/Valo_Hotel1.jpg" alt="face hotel"></div>
-        <div class="item"><img src="assets/IMG/Valo_Hotel4.jpg" alt="inside hotel"></div>
-        <div class="item"><img src="assets/IMG/Valo_Hotel3.jpg" alt="inside hotel"></div>
-        <div class="item"><img src="assets/IMG/Valo_Hotel5.jpg" alt="room"></div>
-        <div class="item"><img src="assets/IMG/Valo_Hotel9.jpg" alt="restaurant"></div>
-        <div class="item"><img src="assets/IMG/Valo_Hotel2.jpg" alt="pool"></div>
-        <div class="item"><img src="assets/IMG/Valo_Hotel8.jpg" alt="pool"></div>
-        <div class="item"><img src="assets/IMG/Valo_Hotel7.jpg" alt="sauna"></div>
-        <div class="item"><img src="assets/IMG/Valo_Hotel10.jpg" alt="sport"></div>
+  <div class="item"><img src="assets/IMG/Valo_Hotel6.jpg" alt="face hotel"></div>
+  <div class="item"><img src="assets/IMG/Valo_Hotel1.jpg" alt="face hotel"></div>
+  <div class="item"><img src="assets/IMG/Valo_Hotel4.jpg" alt="inside hotel"></div>
+  <div class="item"><img src="assets/IMG/Valo_Hotel3.jpg" alt="inside hotel"></div>
+  <div class="item"><img src="assets/IMG/Valo_Hotel5.jpg" alt="room"></div>
+  <div class="item"><img src="assets/IMG/Valo_Hotel9.jpg" alt="restaurant"></div>
+  <div class="item"><img src="assets/IMG/Valo_Hotel2.jpg" alt="pool"></div>
+  <div class="item"><img src="assets/IMG/Valo_Hotel8.jpg" alt="pool"></div>
+  <div class="item"><img src="assets/IMG/Valo_Hotel7.jpg" alt="sauna"></div>
+  <div class="item"><img src="assets/IMG/Valo_Hotel10.jpg" alt="sport"></div>
+</div>
+<hr>
+
+<div class="amenities">
+  <div class="amenity">
+    <script src="https://cdn.lordicon.com/lordicon.js"></script>
+    <lord-icon src="https://cdn.lordicon.com/tckirjgy.json" trigger="hover" style="width:100px;height:100px">
+    </lord-icon>
+    <span class="vibrate">Superb breakfast</span>
+  </div>
+  <div class="amenity">
+    <script src="https://cdn.lordicon.com/lordicon.js"></script>
+    <lord-icon src="https://cdn.lordicon.com/mwgfcdaj.json" trigger="hover" style="width:100px;height:100px">
+    </lord-icon>
+    <span class="vibrate">Restaurant</span>
+  </div>
+  <div class="amenity">
+    <script src="https://cdn.lordicon.com/lordicon.js"></script>
+    <lord-icon src="https://cdn.lordicon.com/nppxdkvw.json" trigger="hover" style="width:100px;height:100px">
+    </lord-icon>
+    <span class="vibrate">Sport</span>
+  </div>
+  <div class="amenity">
+    <script src="https://cdn.lordicon.com/lordicon.js"></script>
+    <lord-icon src="https://cdn.lordicon.com/vypcpgwt.json" trigger="hover" style="width:100px;height:100px">
+    </lord-icon>
+    <span class="vibrate">On-site parking</span>
+  </div>
+  <div class="amenity">
+    <script src="https://cdn.lordicon.com/lordicon.js"></script>
+    <lord-icon src="https://cdn.lordicon.com/jqnkycbd.json" trigger="hover" style="width:100px;height:100px">
+    </lord-icon>
+    <span class="vibrate">Pets allowed</span>
+  </div>
+  <div class="amenity">
+    <script src="https://cdn.lordicon.com/lordicon.js"></script>
+    <lord-icon src="https://cdn.lordicon.com/iqtrmdyz.json" trigger="hover" style="width:100px;height:100px">
+    </lord-icon>
+    <span class="vibrate">Private bathroom</span>
+  </div>
+  <div class="amenity">
+    <script src="https://cdn.lordicon.com/lordicon.js"></script>
+    <lord-icon src="https://cdn.lordicon.com/lzlcrlfm.json" trigger="hover" style="width:100px;height:100px">
+    </lord-icon>
+    <span class="vibrate">Free Wi-Fi</span>
+  </div>
+  <div class="amenity">
+    <script src="https://cdn.lordicon.com/lordicon.js"></script>
+    <lord-icon src="https://cdn.lordicon.com/mgszhlom.json" trigger="hover" style="width:100px;height:100px">
+    </lord-icon>
+    <span class="vibrate">View</span>
+  </div>
+  <div class="amenity">
+    <script src="https://cdn.lordicon.com/lordicon.js"></script>
+    <lord-icon src="https://cdn.lordicon.com/fzudyijl.json" trigger="hover" style="width:100px;height:100px">
+    </lord-icon>
+    <span class="vibrate">Room Service</span>
+  </div>
+  <div class="amenity">
+    <script src="https://cdn.lordicon.com/lordicon.js"></script>
+    <lord-icon src="https://cdn.lordicon.com/jrxatxqu.json" trigger="hover" style="width:100px;height:100px">
+    </lord-icon>
+    <span class="vibrate">Non-smoking rooms</span>
+  </div>
+</div>
+<hr>
+
+<div class="row">
+  <div class="col-6">
+    <section class="hotel-info">
+      <h1 class="animated-title">VALO Hotel & Work Helsinki</h1>
+      <p>VALO Hotel & Work Helsinki has a restaurant, fitness center and bar in Helsinki. In this establishment, you will find family accommodation with a terrace. It provides room service and its reception is open 24 hours a day. Free Wi-Fi is available throughout the property.</p>
+      <p>All accommodation is equipped with a kettle. Featuring a private bathroom with a bidet and a hairdryer, all rooms at VALO Hotel & Work Helsinki include air conditioning and a flat-screen TV. Some rooms also have a seating area. Towels and bed linen are provided in all accommodation.</p>
+      <p>Guests can enjoy a continental or buffet breakfast at the property.</p>
+      <p>This hotel is 1.9 km from Hartwall Arena and 2.7 km from Bolt Arena Telia 5G Areena Football Stadium. The nearest airport is Helsinki-Vantaa Airport, 15.5 km from VALO Hotel & Work Helsinki.</p>
+      <p>Couples particularly appreciate the location of this establishment. They give it a rating of 8.0 for a stay for two.</p>
+      <span>The distances indicated in the description of the establishment are calculated with © OpenStreetMap.</span>
+
+      <ul>
+        <li><i class="icon-wifi"></i> Free Wi-Fi</li>
+        <li><i class="icon-air-conditioner"></i> Air-conditioned rooms with flat-screen TV</li>
+        <li><i class="icon-eco"></i> Eco-friendly hotel</li>
+        <li><i class="icon-gym"></i> Gym</li>
+        <li><i class="icon-restaurant"></i> Restaurant and bar</li>
+        <li><i class="icon-family"></i> Family rooms</li>
+        <li><i class="icon-disabled"></i> Equipment for disabled people</li>
+        <li><i class="icon-check-in"></i> Express check-in/out service</li>
+      </ul>
+    </section>
+  </div>
+  <div class="col-3">
+    <section class="hotel-info">
+      <h1 class="xalis">Around the hotel</h1>
+      <p class="text2">Activities</p>
+      <ul>
+        <li><i class="tree"></i> Heureka Science Center  1km</li>
+        <li><i class="tree"></i> Suomenlinna Sea Fortress   500m</li>
+        <li><i class="tree"></i> Kaivopuisto Park     250m</li>
+        <li><i class="tree"></i> Amos Rex Art Museum   2.5km</li>
+      </ul>
+      <p class="text2">Nearby places</p>
+      <ul>
+        <li><i class="tree"></i> Yhteiskoulunaukio   700m</li>
+        <li><i class="tree"></i>Munkinpuisto    300m</li>
+        <li><i class="tree"></i> Mätäjoen ruohokenttä    600m</li>
+        <li><i class="tree"></i> Mannerheim Statue, Helsinki    300m</li>
+      </ul>
+      <p class="text2">Restaurants and cafes</p>
+      <ul>
+        <li><i class="tree"></i> Suo    20m</li>
+        <li><i class="tree"></i> Bistro Elo</li>
+        <li><i class="tree"></i> Oivadeli Aitio</li>
+      </ul>
+      <p class="text2">Public transport</p>
+      <ul>
+        <li><i class="tree"></i> Ilmala Station</li>
+        <li><i class="tree"></i> Sörnäinen Metro Station</li>
+        <li><i class="tree"></i> Hakaniemi Metro Station</li>
+      </ul>
+    </section>
+  </div>
+  <div class="col-3">
+    <section class="hotel-info">
+      <h1 class="xalis">Facilities in the hotel</h1>
+      <p class="text2">Services</p>
+      <ul>
+        <li><i class="tree"></i>Luggage storage</li>
+        <li><i class="tree"></i>Reception open 24/7</li>
+        <li><i class="tree"></i> Laundry/laundry</li>
+      </ul>
+      <p class="text2">Restauration</p>
+      <ul>
+        <li><i class="tree"></i>Breakfast in room</li>
+        <li><i class="tree"></i>Bar</li>
+        <li><i class="tree"></i>Minibar</li>
+        <li><i class="tree"></i>Restaurant</li>
+      </ul>
+      <p class="text2">Well-being</p>
+      <ul>
+        <li><i class="tree"></i>Fitness center</li>
+        <li><i class="tree"></i> Sauna</li>
+      </ul>
+      <p class="text2">Room</p>
+      <ul>
+        <li><i class="tree"></i>Household linens</li>
+        <li><i class="tree"></i>Wardrobe or wardrobe</li>
+      </ul>
+      <p class="text2">Public transport</p>
+      <ul>
+        <li><i class="tree"></i>View of an interior courtyard</li>
+        <li><i class="tree"></i>City view</li>
+      </ul>
+    </section>
+  </div>
+</div>
+
+
+<div class="row">
+  <div class="col-6">
+    <div class="house-rules">
+      <h1 class="xalis">House Rules</h1>
+      <p>Valo Hotel & Work Helsinki takes special requests. Add yours to the next step!</p>
+      <div class="rule-section">
+        <div class="rule">
+          <h2>Arrival</h2>
+          <p>From 4:00 p.m.<br>You must show a photo ID and credit card upon check-in.</p>
+        </div>
+        <div class="rule">
+          <h2>Departure</h2>
+          <p>Until 12:00</p>
+        </div>
+        <div class="rule">
+          <h2>Cancellation / Prepayment</h2>
+          <p>Cancellation and prepayment policies vary depending on accommodation type. Please check the <a
+              href="#">terms</a> that apply to each option when making your choice.</p>
+        </div>
+        <div class="rule">
+          <h2>Children and beds</h2>
+          <p><strong>Conditions relating to children</strong><br>
+            All children are welcome.<br>
+            Children over 13 years old will be charged the adult rate at this property.<br>
+            To see prices and information associated with your group size, please add the number of children you are
+            traveling with and their ages to your search.</p>
+        </div>
       </div>
-      <hr>
+    </div>
+  </div>
+
+  <div class="col-6">
+    <div class="reservation">
+      <h1 class="resa">Room Reservation</h1>
+      <form>
+        <div class="room-option">
+          <label>1 room for 1 person</label>
+          <select>
+            <option value="0">0</option>
+            <option value="1">1</option>
+            <option value="2">2</option>
+          </select>
+        </div>
+        <div class="room-option">
+          <label>1 bedroom for 2 people</label>
+          <select>
+            <option value="0">0</option>
+            <option value="1">1</option>
+            <option value="2">2</option>
+          </select>
+        </div>
+        <div class="room-option">
+          <label>2 bedrooms for 2 people</label>
+          <select>
+            <option value="0">0</option>
+            <option value="1">1</option>
+            <option value="2">2</option>
+          </select>
+        </div>
+        <div class="room-option">
+          <label>2 bedrooms for 3 people</label>
+          <select>
+            <option value="0">0</option>
+            <option value="1">1</option>
+            <option value="2">2</option>
+            
+          </select>
+        </div>
+        <button class="buttonQQQ" style="vertical-align:middle"><span>Book</span></button>
+      </form>
+    </div>
+  </div>
 
 
+</div>
 {% endblock %}
